--- a/mystyle/style.css
+++ b/mystyle/style.css
@@ -1,5 +1,15 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald:wght@200;300;400;500;600;700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Passion+One:wght@400;700;900&display=swap');
+
+:root{
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Oswald', sans-serif;
+}
+
 *{
     margin: 0px;
     padding: 0px;
@@ -8,17 +18,20 @@
 html,body{
     background-color: darkgray;
     min-height: 100vh;
+    font-family: var(--fonte1);
 }
 
 header{
     color: white;
     background-color: black;
     text-align: center;
+    font-family: var(--fonte2);
 }
 
 header h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-size: 10vw;
 }
 
 header p{
@@ -40,6 +53,8 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3vw;
 }
 
 section.normal{
@@ -54,7 +69,8 @@ section.imagem{
 
 section.imagem > p{
     background-color: rgba(0, 0, 0, 0.253);
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
 }
 
 footer{
