--- a/mystyle/style.css
+++ b/mystyle/style.css
@@ -1,13 +1,13 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald:wght@200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Passion+One:wght@400;700;900&display=swap');
 
 :root{
     --fonte1: Verdana, Geneva, Tahoma, sans-serif;
     --fonte2: 'Passion One', cursive;
-    --fonte3: 'Oswald', sans-serif;
+    --fonte3: 'Pacifico', cursive;
 }
 
 *{
@@ -61,10 +61,30 @@ section.normal{
     background-color: white;
     color: black;
 }
+section > p{
+    padding-bottom: 2em;
+}
 
 section.imagem{
     background-color: rgb(51, 51, 51);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.473);
+    background-size: cover;
+}
+
+section#img01{
+    background-image: url(../imagens/background001.jpg);
+    background-attachment: fixed;
+    background-position: right center;
+    background-repeat: no-repeat;
+}
+
+section#img02{
+    background-image: url(../imagens/background002.jpg);
+    background-attachment: fixed;
+    background-position: center bottom;
+    background-repeat: no-repeat;
+
 }
 
 section.imagem > p{
